--- a/package.json
+++ b/package.json
@@ -19,9 +19,15 @@
   "dependencies": {
     "@nestjs/common": "^5.0.0",
     "@nestjs/core": "^5.0.0",
+    "@nestjs/typeorm": "^5.1.0",
+    "class-validator": "^0.9.1",
+    "dotenv": "^6.0.0",
     "fastify-formbody": "^2.0.0",
+    "lodash": "^4.17.10",
+    "moment": "^2.22.2",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.0.0",
+    "typedi": "^0.8.0",
     "typeorm": "^0.2.7",
     "typescript": "^2.6.2"
   },
